<resources>
    <string name="ism_app_name" translatable="false">Isometrik</string>
    <string name="ism_error">Failed to complete requested operation, check Isometrik sdk logs for more details</string>
    <string name="ism_create_user">Create User</string>
    <string name="ism_no_users">No registered users found</string>
    <string name="ism_users">Users</string>
    <string name="ism_select">Select</string>
    <string name="ism_fetching_users">Fetching users</string>
    <string name="ism_continue">CONTINUE</string>
    <string name="ism_cancel">CANCEL</string>
    <string name="ism_search_users_hint">Search users…</string>
    <string name="ism_user_image_alert_heading">User profile image</string>
    <string name="ism_user_image_alert_message">Create user without a profile image?</string>
    <string name="ism_next">Next</string>
    <string name="ism_user_name">User Name*</string>
    <string name="ism_user_identifier">User Identifier*</string>
    <string name="ism_user_password">User Password*</string>
    <string name="ism_user_metadata">User Metadata</string>
    <string name="ism_enter_user_name">Enter user name</string>
    <string name="ism_enter_user_identifier">Enter username, phone or email</string>
    <string name="ism_enter_user_password">Enter user password</string>
    <string name="ism_enter_user_metadata">Enter user\'s additional info</string>
    <string name="ism_select_user"> Select user</string>
    <string name="ism_avoid_create_user">Don\'t wanna create user?</string>
    <string name="ism_permission_image_capture">Grant permission to capture image!!</string>
    <string name="ism_permission_image_capture_denied">Permission to capture image denied!!</string>
    <string name="ism_image_capture_canceled">Image capture canceled!!</string>
    <string name="ism_image_capture_failure">Failed to capture image!!</string>
    <string name="ism_camera_not_found">Camera not found!!</string>
    <string name="ism_ok">OK</string>
    <string name="ism_invalid_username">Add user name to continue!!</string>
    <string name="ism_invalid_user_identifier">Add user identifier to continue!!</string>
    <string name="ism_missing_user_password">Add user password to continue!!</string>
    <string name="ism_invalid_user_password">Password must be atleast 6 characters long and should have atleast one each of digit,small,capital alphabets and special character!!</string>
    <string name="ism_invalid_user_image">Add user profile pic to continue!!</string>
    <string name="ism_creating_user">Creating user</string>
    <string name="ism_uploading_image">Uploading image</string>
    <string name="ism_unexpected_error">Unexpected error, Try again!!</string>
    <string name="ism_save">Save</string>
    <string name="ism_edit_user">Edit User</string>
    <string name="ism_updating_user_details">Updating user details</string>
    <string name="ism_edit_user_details_canceled">Edit user details canceled!!</string>
    <string name="ism_user_details">User Details</string>
    <string name="ism_user_name_holder">User Name</string>
    <string name="ism_user_identifier_holder">User Identifier</string>
    <string name="ism_user_metadata_holder">User Metadata</string>
    <string name="ism_user_notifications_holder">Notifications</string>
    <string name="ism_switch_user">Switch User</string>
    <string name="ism_deleting_user">Deleting user</string>
    <string name="ism_connection_lost">You are offline!!</string>
    <string name="ism_photos">Photos</string>
    <string name="ism_videos">Videos</string>
    <string name="ism_files">Files</string>
    <string name="ism_location">Location</string>
    <string name="ism_contact">Contact</string>
    <string name="ism_whiteboard">Whiteboard</string>
    <string name="ism_sticker">Sticker</string>
    <string name="ism_sticker_gif">Sticker &amp; Gif</string>
    <string name="ism_gif">GIF</string>
    <string name="ism_share_photos">Share photos</string>
    <string name="ism_share_videos">Share videos</string>
    <string name="ism_share_files">Share files</string>
    <string name="ism_share_location">Share location</string>
    <string name="ism_share_contact">Share contact</string>
    <string name="ism_share_whiteboard">Draw on whiteboard</string>
    <string name="ism_share_sticker_gif">Share sticker &amp; gif</string>
    <string name="ism_share_sticker">Share sticker</string>
    <string name="ism_share_gif">Share gif</string>
    <string name="ism_attachments_title">Attachments</string>
    <string name="ism_open_camera">Open camera</string>
    <string name="ism_camera">Camera</string>
    <string name="ism_record_video">Record Video</string>
    <string name="ism_share_recording">Share recording</string>
    <string name="ism_new_conversation_title">New Conversation</string>
    <string name="ism_new_private_onetoone_conversation">One to One Conversation</string>
    <string name="ism_new_private_group_conversation">Group Conversation</string>
    <string name="ism_new_public_group_conversation">New Public Conversation</string>
    <string name="ism_new_open_conversation">New Open Conversation</string>
    <string name="ism_public_conversation_title_hint">Public conversation title</string>
    <string name="ism_private_conversation_title_hint">Private conversation title</string>
    <string name="ism_open_conversation_title_hint">Open conversation title</string>
    <string name="ism_setting_notification">Send notifications</string>
    <string name="ism_setting_typing_message">Send typing message events</string>
    <string name="ism_setting_read_delivery">Send message delivery or read events</string>
    <string name="ism_search_participants">Search participants…</string>
    <string name="ism_conversation_image_alert_heading">Conversation cover image</string>
    <string name="ism_conversation_image_alert_message">Create conversation without a cover image?</string>
    <string name="ism_yes">Yes</string>
    <string name="ism_no">No</string>
    <string name="ism_gallery_title">Gallery</string>
    <string name="ism_empty_attachments">It\'s empty at the moment.</string>
    <string name="ism_no_media">Media shared in this conversation will appear here.</string>
    <string name="ism_no_weblinks">Weblinks shared in this conversation will appear here.</string>
    <string name="ism_no_files">Files shared in this conversation will appear here.</string>
    <string name="ism_weblinks">Weblinks</string>
    <string name="ism_media">Media</string>
    <string name="ism_links">Links</string>
    <string name="ism_docs">Docs</string>
    <string name="ism_media_links_docs">Media, Links and Docs</string>
    <string name="ism_contact_info_title">Contact Info</string>
    <string name="ism_block_user_label">Block User</string>
    <string name="ism_locations">Locations</string>
    <string name="ism_contacts">Contacts</string>
    <string name="ism_whiteboards">Whiteboards</string>
    <string name="ism_stickers">Stickers</string>
    <string name="ism_gifs">GIFs</string>
    <string name="ism_audio_recordings">Audio recordings</string>
    <string name="ism_conversation_details_title">Conversation Details</string>
    <string name="ism_created_by">Created by %1$s</string>
    <string name="ism_send_message">Send message</string>
    <string name="ism_search_in_conversation">Search in conversation</string>
    <string name="ism_participants_count">%1$d PARTICIPANTS</string>
    <string name="ism_add_participants">Add participants</string>
    <string name="ism_admin">Admin</string>
    <string name="ism_make_admin">Make admin</string>
    <string name="ism_remove_as_admin">Remove from admin</string>
    <string name="ism_show_more">Show more</string>
    <string name="ism_conversation_gallery">CONVERSATION GALLERY</string>
    <string name="ism_conversation_settings">CONVERSATION SETTINGS</string>
    <string name="ism_add_participants_canceled">Adding participants to conversation canceled</string>
    <string name="ism_delete_conversation">Delete Chat</string>
    <string name="ism_clear_conversation">Clear Chat</string>
    <string name="ism_leave_conversation">Leave conversation</string>
    <string name="ism_join_conversation">Join conversation</string>
    <string name="ism_empty_gallery_title">The Gallery Is Empty</string>
    <string name="ism_empty_gallery_description">Photos, videos, files etc shared in this conversation will appear here.</string>
    <string name="ism_update_notification_setting">%1$s notifications</string>
    <string name="ism_update_typing_message_setting">%1$s typing message events</string>
    <string name="ism_update_read_delivery_setting">%1$s message delivery or read events</string>
    <string name="ism_update_conversation_settings">Update conversation settings</string>
    <string name="ism_enable">Enable</string>
    <string name="ism_disable">Disable</string>
    <string name="ism_notification_setting">Notifications %1$s</string>
    <string name="ism_typing_message_setting">Typing message events %1$s</string>
    <string name="ism_read_delivery_setting">Message delivery or read events %1$s</string>
    <string name="ism_enabled">enabled</string>
    <string name="ism_disabled">disabled</string>
    <string name="ism_updating_typing_message_settings">Updating typing message events settings</string>
    <string name="ism_updating_message_delivery_read_settings">Updating message delivery or read events settings</string>
    <string name="ism_updating_notification_settings">Updating notification settings</string>
    <string name="ism_updating_conversation_title">Updating conversation title</string>
    <string name="ism_updating_conversation_image">Updating conversation image</string>
    <string name="ism_update_conversation_title_alert_heading">Update conversation title</string>
    <string name="ism_update_conversation_image_alert_heading">Update conversation image</string>
    <string name="ism_update_conversation_title_alert_message">Conversation title will be changed to %1$s</string>
    <string name="ism_update_conversation_image_alert_message">Conversation image will be updated</string>
    <string name="ism_leaving_conversation">Leaving conversation</string>
    <string name="ism_clearing_conversation">Clearing conversation</string>
    <string name="ism_deleting_conversation">Deleting conversation</string>
    <string name="ism_type_something">Type something to send message</string>
    <string name="ism_make_admin_alert_heading">Make %1$s admin</string>
    <string name="ism_make_admin_alert_message">Granting admin privileges to a member will allow him to add/remove members, grant/revoke admin privileges and update settings of conversation</string>
    <string name="ism_remove_as_admin_alert_heading">Remove %1$s as admin</string>
    <string name="ism_remove_as_admin_alert_message">Once admin privileges are revoked, member will no longer be able to add/remove members, grant/revoke admin privileges or update settings of conversation</string>
    <string name="ism_kick_out_member_heading">Kick-out %1$s</string>
    <string name="ism_kick_out_member_alert_message">Once kicked out, a member will not receive any messages exchanged in conversation</string>
    <string name="ism_clear_conversation_alert">Clearing conversation will delete all messages in conversation for you</string>
    <string name="ism_delete_conversation_alert">Once deleted one cannot access conversation details or any messages exchanged in that conversation</string>
    <string name="ism_comma">,</string>
    <string name="ism_add">Add</string>
    <string name="ism_block">Block</string>
    <string name="ism_block_user_dialog_message">This person won\'t be able to message or call you. They won\'t know you blocked them.</string>
    <string name="ism_message_edit_hint">Edit the message…</string>
    <string name="ism_sms">SMS</string>
    <string name="ism_call">Call</string>
</resources>