<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ism_white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/ism_dp_24"
    android:paddingTop="@dimen/ism_dp_24"
    android:paddingEnd="@dimen/ism_dp_24"
    android:paddingBottom="@dimen/ism_dp_8">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/ism_dp_48"
        android:layout_height="@dimen/ism_dp_48"
        app:srcCompat="@drawable/ism_ic_block_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBlockDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ism_dp_16"
        android:gravity="center"
        android:textColor="@color/ism_black"
        android:textSize="@dimen/ism_sp_18"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBlockDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ism_dp_12"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/ism_dp_4"
        android:text="@string/ism_block_user_dialog_message"
        android:textColor="@color/ism_conversation_details_grey"
        android:textSize="@dimen/ism_sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ism_dp_24"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ism_dp_12"
            android:text="@string/ism_cancel"
            android:textAllCaps="true"
            android:textColor="@color/ism_theme_base"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ism_dp_12"
            android:text="@string/ism_block"
            android:textAllCaps="true"
            android:textColor="@color/ism_theme_base"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
