<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/ism_dp_10"
    android:paddingHorizontal="@dimen/ism_dp_15">

    <View
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="@drawable/ism_reaction_item_curved_background"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/ism_shimmer_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="@dimen/ism_dp_40"
        android:layout_height="@dimen/ism_dp_40"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/ism_dp_15"
        android:layout_marginTop="@dimen/ism_dp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_view"
        app:srcCompat="@drawable/ism_ic_profile" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ism_dp_5"
        android:layout_marginEnd="@dimen/ism_dp_13"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/ism_user_name"
        android:textColor="@color/ism_black"
        app:layout_constraintBottom_toTopOf="@+id/tvContactIdentifier"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePic" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContactIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ism_dp_5"
        android:layout_marginTop="@dimen/ism_dp_3"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/ism_user_identifier"
        android:textColor="@color/ism_black"
        android:textSize="@dimen/ism_sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePic"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/tvContactName" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAdd"
        android:layout_width="@dimen/ism_dp_50"
        android:layout_height="@dimen/ism_dp_25"
        android:layout_marginTop="@dimen/ism_dp_4"
        android:layout_marginEnd="@dimen/ism_dp_8"
        android:background="@drawable/ism_conversation_type_background"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/ism_dp_6"
        android:paddingTop="@dimen/ism_dp_2"
        android:paddingEnd="@dimen/ism_dp_6"
        android:paddingBottom="@dimen/ism_dp_3"
        android:text="@string/ism_add"
        android:textColor="@color/ism_white"
        android:textSize="11sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePic" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="@dimen/ism_dp_10"
        android:layout_marginTop="@dimen/ism_dp_10"
        android:alpha=".4"
        android:background="@color/ism_black"
        app:layout_constraintTop_toBottomOf="@+id/tvContactIdentifier" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/iv_sms"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        android:layout_marginTop="@dimen/ism_dp_10"
        android:text="@string/ism_sms"
        android:textColor="@color/ism_black"
        android:textSize="14sp"
        android:drawablePadding="@dimen/ism_dp_5"
        android:drawableStart="@drawable/ism_ic_forward_conversation"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/iv_call"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        android:layout_marginTop="@dimen/ism_dp_10"
        android:text="@string/ism_call"
        android:textColor="@color/ism_black"
        android:textSize="14sp"
        android:drawablePadding="@dimen/ism_dp_5"
        android:drawableStart="@drawable/ism_ic_audio_call"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>