<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/ism_dp_8"
    android:paddingEnd="@dimen/ism_dp_8"
    android:paddingTop="@dimen/ism_dp_8">

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/ism_quoted_message_background"
      android:minWidth="@dimen/ism_dp_120"
      android:paddingStart="@dimen/ism_dp_12"
      android:paddingTop="@dimen/ism_dp_6"
      android:paddingEnd="@dimen/ism_dp_8"
      android:paddingBottom="@dimen/ism_dp_6">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivQuote"
        android:layout_width="@dimen/ism_dp_0"
        android:layout_height="@dimen/ism_dp_0"
        android:visibility="gone"
        app:srcCompat="@drawable/ism_ic_quote" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMessageImage"
        android:layout_width="@dimen/ism_dp_24"
        android:layout_height="@dimen/ism_dp_24"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:srcCompat="@drawable/ism_ic_contact" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/ivMessageImage"
        android:ellipsize="end"
        android:maxLength="20"
        android:maxLines="1"
        android:text="@string/ism_user_name"
        android:textColor="@color/ism_typing_blue"
        android:textSize="@dimen/ism_sp_14"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSenderName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/ism_dp_2"
        android:layout_toStartOf="@+id/ivMessageImage"
        android:ellipsize="end"
        android:maxLines="2"
        android:maxWidth="@dimen/ism_dp_200"
        android:text="@string/ism_send_message"
        android:textColor="@color/ism_parent_message_time_grey"
        android:textSize="@dimen/ism_sp_12" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvComma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:text="@string/ism_comma"
        android:textColor="@color/ism_parent_message_time_grey"
        android:textSize="@dimen/ism_sp_12"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:layout_toEndOf="@+id/tvComma"
        android:text="23:00"
        android:textColor="@color/ism_parent_message_time_grey"
        android:textSize="@dimen/ism_sp_12"
        android:visibility="gone" />

  </RelativeLayout>

</RelativeLayout>
